# nostr-sdk-ffi

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: publish-csharp.yml
android/lib/: build.gradle.kts
csharp/: README.md
csharp/Nostr.Sdk/: Nostr.Sdk.csproj
jvm/lib/: build.gradle.kts
kmp/nostr-sdk-kmp/: build.gradle.kts
python/: README.md  pyproject.toml
python/examples/: custom-websocket-client.py
src/: lib.rs  local_relay.rs
