[package]
name = "nostr-sdk-ffi"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "nostr_sdk_ffi"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = [
    "nip04",
    "nip06",
    "nip44",
    "nip46",
    "nip47",
    "nip49",
    "nip59",
    "pow-multi-thread",
    "connect",
    "nwc",
    "gossip-sqlite",
    "lmdb",
    "logger",
]
nip04 = ["nostr/nip04"]
nip06 = ["nostr/nip06"]
nip44 = ["nostr/nip44"]
nip46 = ["nostr/nip46"]
nip47 = ["nostr/nip47"]
nip49 = ["nostr/nip49"]
nip59 = ["nostr/nip59"]
pow-multi-thread = ["nostr/pow-multi-thread"]
connect = ["dep:nostr-connect"]
nwc = ["dep:nwc"]
gossip-sqlite = ["dep:nostr-gossip-sqlite"]
lmdb = ["dep:nostr-lmdb"]
ndb = ["dep:nostr-ndb"]
logger = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
async-trait = "0.1.89"
async-wsocket = { version = "0.15", default-features = false }
futures-util = "0.3"
nostr = { version = "0.45.0-alpha.4", features = ["std"] }
nostr-connect = { version = "0.45.0-alpha.4", optional = true }
nostr-database = { version = "0.45.0-alpha.4" }
nostr-gossip = { version = "0.45.0-alpha.4" }
nostr-gossip-memory = { version = "0.45.0-alpha.4" }
nostr-sdk  = { version = "0.45.0-alpha.4" }
nwc = { version = "0.45.0-alpha.4", optional = true }
tokio = { version = "=1.49.0", default-features = false, features = ["sync"] }
tracing = { version = "0.1.41", features = ["std"], optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }
uniffi = { version = "=0.29.5", features = ["tokio", "cli"] } # cli feature required for the `uniffi-bindgen` binary

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nostr-gossip-sqlite = { version = "0.45.0-alpha.4", optional = true }
nostr-lmdb = { version = "0.45.0-alpha.4", optional = true }
nostr-ndb = { version = "0.45.0-alpha.4", optional = true }
nostr-sdk  = { version = "0.45.0-alpha.4", features = ["local-relay"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom2 = { package = "getrandom", version = "=0.2.17", features = ["js"] }
getrandom3 = { package = "getrandom", version = "=0.3.2", features = ["wasm_js"] }
getrandom4 = { package = "getrandom", version = "=0.4.2", features = ["wasm_js"] }
universal-time = "0.3.0"
web-time = "1.1.0"

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"

[patch.crates-io]
# Patch that uses bitcoin_hashes v0.14
bip39 = { git = "https://github.com/yukibtc/rust-bip39", branch = "v2.1.0+hashes-v0.14" }
